--- a/ui/html/footer.partial.tmpl
+++ b/ui/html/footer.partial.tmpl
@@ -1,3 +1,3 @@
 {{define "footer"}}
-<footer>Created by <strong>Gentlemen</strong></footer>
+<footer>Created by <strong>Gentlemen</strong> in {{.CurrentYear}}</footer>
 {{end}}
