--- a/ui/html/create.page.tmpl
+++ b/ui/html/create.page.tmpl
@@ -1,33 +1,35 @@
 {{template "base" .}}
-{{define "title"}}Добавить новую проблему{{end}}
+{{define "title"}}Create a New Snippet{{end}}
 {{define "main"}}
 <form action='/snippet/create' method='POST'>
-    <div>
-        <label>Проблема:</label>
-        {{with .FormErrors.title}}
-            <label class='error'>{{.}}</label>
-        {{end}}
-        <input type='text' name='title'>
-    </div>
-    <div>
-        <label>Описание:</label>
-        {{with .FormErrors.content}}
-            <label class='error'>{{.}}</label>
-        {{end}}
-        <textarea name='content'></textarea>
-    </div>
-    <div>
-        <label>Будет отображаться:</label>
-        {{with .FormErrors.expires}}
-            <label class='error'>{{.}}</label>
-        {{end}}
-        {{$exp := or (.FormData.Get "expires") "365"}}
-        <input type='radio' name='expires' value='365' checked> Год
-        <input type='radio' name='expires' value='7'> Неделя
-        <input type='radio' name='expires' value='1'> День
-    </div>
-    <div>
-        <input type='submit' value='Опубликовать'>
-    </div>
+    {{with .Form}}
+        <div>
+            <label>Title:</label>
+            {{with .Errors.Get "title"}}
+                <label class='error'>{{.}}</label>
+            {{end}}
+            <input type='text' name='title' value='{{.Get "title"}}'>
+        </div>
+        <div>
+            <label>Content:</label>
+            {{with .Errors.Get "content"}}
+                <label class='error'>{{.}}</label>
+            {{end}}
+            <textarea name='content'>{{.Get "content"}}</textarea>
+        </div>
+        <div>
+            <label>Delete in:</label>
+            {{with .Errors.Get "expires"}}
+                <label class='error'>{{.}}</label>
+            {{end}}
+            {{$exp := or (.Get "expires") "365"}}
+            <input type='radio' name='expires' value='365' {{if (eq $exp "365")}}checked{{end}}> One Year
+            <input type='radio' name='expires' value='7' {{if (eq $exp "7")}}checked{{end}}> One Week
+            <input type='radio' name='expires' value='1' {{if (eq $exp "1")}}checked{{end}}> One Day
+        </div>
+        <div>
+            <input type='submit' value='Publish snippet'>
+        </div>
+    {{end}}
 </form>
 {{end}}
