Stateful HTTP. 9.2. patch. Setting Up the Session Manager

--- a/ui/html/base.layout.tmpl
+++ b/ui/html/base.layout.tmpl
@@ -16,7 +16,7 @@
         </header>
         <nav>
             <a href='/'>Домашняя страница</a>
-            <a href='/snippet/form'>Рассказать о проблеме</a>
+            <a href='/snippet/create'>Рассказать о проблеме</a>
         </nav>
         <main>
             {{template "main" .}}
