Stateful HTTP. 9.3. patch. Auto-displaying Flash Messages

--- a/ui/html/base.layout.tmpl
+++ b/ui/html/base.layout.tmpl
@@ -19,6 +19,9 @@
             <a href='/snippet/create'>Рассказать о проблеме</a>
         </nav>
         <main>
+            {{with .Flash}}
+            <div class='flash'>{{.}}</div>
+            {{end}}
             {{template "main" .}}
         </main>
         {{template "footer" .}}
