--- a/ui/html/base.layout.tmpl
+++ b/ui/html/base.layout.tmpl
@@ -18,14 +18,21 @@
             <!-- Update the navigation to include signup, login and logout links -->
             <div>
                 <a href='/'>На главную</a>
-                <a href='/snippet/create'>Опубликовать</a>
+                {{if .IsAuthenticated}}
+                    <a href='/snippet/create'>Опубликовать</a>
+                {{end}}
+
             </div>
             <div>
-                <a href='/user/signup'>Регистрация</a>
-                <a href='/user/login'>Вход</a>
-                <form action='/user/logout' method='POST'>
-                    <button>Выход</button>
-            </form>
+                <!-- Toggle the navigation links -->
+                {{if .IsAuthenticated}}
+                    <form action='/user/logout' method='POST'>
+                        <button>Выйти</button>
+                    </form>
+                {{else}}
+                    <a href='/user/signup'>Зарегаться</a>
+                    <a href='/user/login'>Войти</a>
+                {{end}}
             </div>
 
         </nav>
